--- a/constraints.tex
+++ b/constraints.tex
@@ -468,73 +468,6 @@ Furthermore, the current notation does not even make it obvious that
 these are independent mechanisms. One has to examine the type to make
 sure that there is no interaction.
 
-TODO: Change this after splitting the chapters.
-
-In the rest of this chapter, we will devote ourselves to investigating
-ways of disentangling these.
-
-\section{Intersections of Types}
-
-Our goal is to split the types into smaller parts that only talk about
-features belonging to one of the three mechanisms covered above. This
-means that we would like to take some phrase about which we know a lot
-of disparate pieces of information (presence of negative determiner,
-trace status, number\ldots), having type
-e.g. $NP\_\textcolor{red}{NEG{=}T}\_\textcolor{green}{VAR{=}F}\_\textcolor{blue}{NUM{=}PL}$,
-and use it as an argument for some function which only cares about one
-channel of information and would have a type like
-$NP\_\textcolor{red}{NEG{=}T} \limp N\_\textcolor{red}{NEG{=}F} \limp
-N\_\textcolor{red}{NEG{=}T}$. To make a type such as
-$NP\_\textcolor{red}{NEG{=}T}\_\textcolor{green}{VAR{=}F}\_\textcolor{blue}{NUM{=}PL}$
-be a legal argument to a function which expects an argument of type
-$NP\_\textcolor{red}{NEG{=}T}$, we will need to introduce some notion of
-\emph{subtyping}.
-
-The types we have been showing up to now propose a very straightforward
-notion of subtyping. All of the types can be seen as conjunctions of
-properties where $\_$ (underscore) is the conjunction operator. A type
-$\tau$ can then be seen as a subtype of type $\sigma$ whenever the
-conjuncts of $\tau$ form a superset of the conjuncts of $\sigma$. This
-is not unlike the structural typing of records in OCaml (CITE SOME OCAML
-SPEC HERE), where a record type is a subtype of another record type if
-the former provides, among others, all the fields provided by the latter
-and gives them the same type. In our case, one type is a subtype of
-another if the former gives, among others, all the properties given by
-the latter. This notion of subtyping can be expressed by adding the rule
-of inference in Figure~\ref{fig:type-superset} to our type
-system.\footnote{In the rule \ldots (talk about $\land$ instead of $\_$
-  (underscore) here...)}
-
-\begin{figure}
-  \begin{prooftree}
-    \AxiomC{$\Gamma_l; \Gamma_i \vdash_\Sigma M : A_1 \land \ldots A_{i-1} \land A_i \land A_{i+1} \ldots \land A_n$}
-    \RightLabel{(subtype)}
-    \UnaryInfC{$\Gamma_l; \Gamma_i \vdash_\Sigma M : A_1 \land \ldots A_{i-1} \land A_{i+1} \ldots \land A_n$}
-  \end{prooftree}
-  \caption{\label{fig:type-superset} A rule of inference giving us
-    subtyping for conjunctions of atomic types. For readability, we use
-    $\land$ instead of $\_$ (underscore) to designate the conjunction of
-    properties.}
-\end{figure}
-
-(Talk about whether or not this is a conservative extension...)
-
-With the new subtyping rule, we can
-
-$$
-S_{tatou} : N \land NEG{=}F \land NUM{=}SG
-$$
-$$
-S_{le_{NEG_1}} : (N \land NEG{=}F) \limp (((NP \land NEG{=}F) \limp S) \limp S)
-$$
-$$
-S_{le_{NEG_2}} : (N \land NEG{=}T) \limp (((NP \land NEG{=}T) \limp S) \limp S)
-$$
-$$
-S_{le_{NUM}} : (N \land NUM{=}SG) \limp (((NP \land NUM{=}SG) \limp S) \limp S)
-$$
-$$
-S_{le_{VAR}} : N \limp (((NP \land VAR{=}F) \limp S) \limp S)
-$$
-
-\ldots
+In the next chapter, we will present our proposed solution to the
+problem of writing simple grammars that cover multiple linguistic
+constraints.
