--- a/ig.tex
+++ b/ig.tex
@@ -1,7 +1,11 @@
 \section{Interaction Grammars}
 
 We will briefly discuss one more grammar formalism and that is the
-formalism of Interaction Grammars \cite{guillaume2009interaction}.
+formalism of interaction grammars \cite{guillaume2009interaction}. This
+formalism is of particular interest to us since it is based on the same
+logical basis as ACGs and there is already a detailed wide-coverage
+grammar written in it.
+
 Interaction grammars are a grammatical formalism centered around the
 concept of \emph{polarity}. An interaction grammar is a set of
 (under-specified) tree descriptions which define a set of trees that can
