--- a/motivation.tex
+++ b/motivation.tex
@@ -97,9 +97,9 @@ The grammatical formalism of our choice for this task will be the
 abstract categorial grammars (ACGs) \cite{de2001towards}. This framework
 lets use lambda calculus to express the syntax-semantics interface in a
 fashion similar to Montague's. Furthermore, elegant techniques for using
-ACGs to implement DRT and SDRT using continuations have been
-discovered (see \cite{de2006towards}, \cite{asher2011sdrt} and
-\cite{asher2011montagovian}).
+ACGs to implement DRT and SDRT using continuations have been discovered
+(see \cite{de2006towards}, \cite{asher2011sdrt},
+\cite{asher2011montagovian} and \cite{qian2011event}).
 
 However, abstract categorial grammars are quite young and no significant
 grammar has been developed under this framework. To facilitate the
