--- a/front-page-alone.tex
+++ b/front-page-alone.tex
@@ -1,3 +1,7 @@
+\documentclass{report}
+
+\usepackage{graphicx}
+
 \begin{document}
 
 \begin{titlepage}
@@ -5,7 +9,7 @@
 
 \newcommand{\HRule}{\includegraphics[width=\textwidth]{images/hrule.png}}
 
-%\includegraphics[width=0.9\textwidth]{images/UL_UFR_MI.jpg}\\[2cm]
+\includegraphics[width=0.9\textwidth]{images/UL_UFR_MI.jpg}\\[2cm]
 
 \textsc{\LARGE Master Sciences Cognitives et Applications\\Sp\'ecialit\'e Traitement Automatique du Langage}\\[1.5cm]
 
@@ -30,14 +34,18 @@ Maxime \textsc{Amblard} \\
 ~
 \end{flushright}
 \end{minipage}
-~\\[2.1cm]
-%\includegraphics[width=0.35\textwidth]{images/logoLORIA.jpg}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\includegraphics[width=0.35\textwidth]{images/Calligramme.png}
+~\\[0.6cm]
+\includegraphics[width=0.35\textwidth]{images/logoLORIA.jpg}~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\includegraphics[height=0.10\textheight]{images/Calligramme.png}
 
 \end{center}
 \end{titlepage}
 
 %\maketitle
 
-\newpage
-~~ \pagenumbering{gobble}
-\newpage
+%% \newpage
+%% ~~ \pagenumbering{gobble}
+%% \newpage
+%% \pagenumbering{arabic}
+%% \setcounter{page}{3}
+
+\end{document}
