--- a/thesis.tex
+++ b/thesis.tex
@@ -10,6 +10,7 @@
 \usepackage[labelformat=simple]{subcaption}
 \renewcommand\thesubfigure{(\alph{subfigure})}
 \usepackage{cancel}
+\usepackage[nottoc,numbib]{tocbibind}
 
 %% Linear implication from Alessio Guglielmi
 %% https://groups.google.com/forum/?fromgroups=#!topic/comp.text.tex/0B4C3F_BsVI
@@ -22,8 +23,13 @@
 \input{front-page}
 
 \input{abstract}
+\input{acknowledgments}
 
 \tableofcontents
+\clearpage %next page
+
+\pagenumbering{arabic}
+\setcounter{page}{1}
 
 \chapter{Preliminaries}
 \input{motivation}
