Fixing mistakes post-print

--- a/gacg.tex
+++ b/gacg.tex
@@ -864,7 +864,7 @@ following conditions:
 \end{itemize}
 
 It is easy to see that the newly introduced pangraphical languages solve
-all of the counter-intuitive quirks of object languages that we
+all of the counter-intuitive quirks of extrinsic languages that we
 discussed in this subsection.
 
 \begin{itemize}
