--- a/gacg.tex
+++ b/gacg.tex
@@ -367,7 +367,7 @@ $$
 $$
 $$
 \mathcal{E}_{\mathcal{G}}(v) = \mathcal{I}_{\mathcal{G}}(v) \cap
-\bigcap_{(u,v) \in E} \mathcal{L}_{(u,v)}(\mathcal{E}_{\mathcal{G}}(u)).
+\bigcap_{(u,v) \in E} \mathcal{L}_{(u,v)}(\mathcal{E}_{\mathcal{G}}(u))
 $$
 
 From the above definition, we see that the ACG diagrams we introduced
