--- a/slides/presentation.tex
+++ b/slides/presentation.tex
@@ -57,7 +57,7 @@
     \item Using a formalism that allows for a simple grammar
       \begin{itemize}
       \item The need to express multiple independent constraints led us
-        to graphical abstact categorial grammars.
+        to graphical abstract categorial grammars.
       \end{itemize}
     \end{itemize}
 \end{frame}
@@ -68,7 +68,7 @@
 
   \begin{itemize}
   \item ACGs are based on types (IILL formulas).
-  \item IGs are based on polarized tree descriptons.
+  \item IGs are based on polarized tree descriptions.
   \item Perrier has linked the two.
 
     \vspace{2 mm}
