--- a/slides/presentation.tex
+++ b/slides/presentation.tex
@@ -16,6 +16,11 @@
   \end{frame}
 }
 
+\setbeamertemplate{navigation symbols}{}
+\setbeamertemplate{footline}
+  {\hfill {\normalsize \insertframenumber{}/\inserttotalframenumber{}}}
+
+
 \begin{document}
 
 \title[G-ACGs]{Towards a Wide-Coverage Grammar}
